	PR fortran/31627

* trans-array.c (gfc_trans_array_bound_check): Take extra argument to
	indicate whether we should check the upper bound in that dimension.
	(gfc_conv_array_index_offset): Check only the lower bound of the
	last dimension for assumed-size arrays.
	(gfc_conv_array_ref): Likewise.
	(gfc_conv_ss_startstride): Likewise.

	* gfortran.dg/bounds_check_7.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@124940 138bc75d-0d04-0410-961f-82ee72b054a4